added k_wargs for retriever

--- a/octopath_chatbot.ipynb
+++ b/octopath_chatbot.ipynb
@@ -1970,7 +1970,7 @@
         "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
         "\n",
         "# the retriever is an abstraction over the VectorStore that will be used during RAG\n",
-        "retriever = vectorstore.as_retriever()\n",
+        "retriever = vectorstore.as_retriever(search_kwargs={\"k\": 10})\n",
         "\n",
         "# putting it together: set up the conversation chain with the LLM model, the vector store and memory\n",
         "conversation_chain = ConversationalRetrievalChain.from_llm(llm=llm, retriever=retriever, memory=memory)"
